# feel-good-spas-business-intelligence

./: .gitignore  .replit  PROJECT_COMPLETION_SUMMARY.md  README.md  STRATEGY_PLAN.md  app.py  business_intelligence.py  conversational_ai.py  crm_integration.py  data_processor.py  database.py  executive_reporting.py  fix_heatmap_and_styling.py  predictive_analytics.py  processed_spa_data.csv  pyproject.toml  replit.md  spa_styles.py  vcon_parser.py
