[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "groq>=0.30.0",
    "nltk>=3.9.1",
    "notion-client>=2.4.0",
    "numpy>=2.3.2",
    "openai>=1.97.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "psycopg2-binary>=2.9.10",
    "scipy>=1.16.1",
    "sendgrid>=6.12.4",
    "sqlalchemy>=2.0.42",
    "streamlit>=1.47.1",
    "textblob>=0.19.0",
]
